Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
0.15.0
Description
The configure stage fails on FreeBSD:
- Building (vendored) jemalloc from source CMake Error at cmake_modules/ThirdpartyToolchain.cmake:1328 (externalproject_add): Unknown CMake command "externalproject_add".
Problems:
- externalproject_add isn't available
- jemalloc shouldn't be needed on BSD because BSDs already use jemalloc
0.15.0-552-gce4fa0166
Attachments
Issue Links
- links to