ARROW-7554: [C++] Add support for building on FreeBSD

I just confirmed that we can build without any CMake options.
I didn't confirm that our test suite is passed.

We can't build jemalloc with --without-libdl because jemalloc requires
lazy-lock feature on FreeBSD and lazy-lock feature requires libdl.

FreeBSD has /usr/include/machine/endian.h instead of
/usr/include/endian.h.

FreeBSD doesn't have MREMAP_MAYMOVE.